--- a/cdc.html
+++ b/cdc.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>... Java Maven-based project analyzed on SonarCloud using Travis-CI.org pour compiler ... - Project Plugin Management</title>
+    <title>... Java Maven-based project analyzed on SonarCloud using Travis-CI.org pour compiler ... - </title>
     <style type="text/css" media="all">
       @import url("./css/maven-base.css");
       @import url("./css/maven-theme.css");
@@ -44,8 +44,8 @@
                                 <h5>Overview</h5>
                   <ul>
                   <li class="none">
-                          <a href="cdc.html" title="Cahier des charges">Cahier des charges</a>
-            </li>
+            <strong>Cahier des charges</strong>
+          </li>
                   <li class="none">
                           <a href="faq.html" title="FAQ">FAQ</a>
             </li>
@@ -59,29 +59,8 @@
     </div>
     <div id="bodyColumn">
       <div id="contentBox">
-        <div class="section">
-<h2>Project Plugin Management<a name="Project_Plugin_Management"></a></h2><a name="Project_Plugin_Management"></a>
-<table border="0" class="bodyTable">
-<tr class="a">
-<th>GroupId</th>
-<th>ArtifactId</th>
-<th>Version</th></tr>
-<tr class="b">
-<td>org.apache.maven.plugins</td>
-<td><a class="externalLink" href="http://maven.apache.org/plugins/maven-antrun-plugin/">maven-antrun-plugin</a></td>
-<td>1.3</td></tr>
-<tr class="a">
-<td>org.apache.maven.plugins</td>
-<td><a class="externalLink" href="http://maven.apache.org/plugins/maven-assembly-plugin/">maven-assembly-plugin</a></td>
-<td>2.2-beta-5</td></tr>
-<tr class="b">
-<td>org.apache.maven.plugins</td>
-<td><a class="externalLink" href="http://maven.apache.org/plugins/maven-dependency-plugin/">maven-dependency-plugin</a></td>
-<td>2.8</td></tr>
-<tr class="a">
-<td>org.apache.maven.plugins</td>
-<td><a class="externalLink" href="http://maven.apache.org/plugins/maven-release-plugin/">maven-release-plugin</a></td>
-<td>2.3.2</td></tr></table></div>
+        <h1>Cahier des charges</h1>
+<h1>sous - titre</h1>
       </div>
     </div>
     <div class="clear">
