--- a/project-info.html
+++ b/project-info.html
@@ -44,7 +44,7 @@
                                 <h5>Overview</h5>
                   <ul>
                   <li class="none">
-                          <a href="foo.html" title="Foo">Foo</a>
+                          <a href="cdc.html" title="Cahier des charges">Cahier des charges</a>
             </li>
                   <li class="none">
                           <a href="faq.html" title="FAQ">FAQ</a>
