Building site for my project

--- a/cdc.html
+++ b/cdc.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>... Java Maven-based project analyzed on SonarCloud using Travis-CI.org pour compiler ... - </title>
+    <title>... MiniP Maven-based documentation generation avec Travis-CI.org ... - </title>
     <style type="text/css" media="all">
       @import url("./css/maven-base.css");
       @import url("./css/maven-theme.css");
@@ -17,7 +17,7 @@
   <body class="composite">
     <div id="banner">
                     <div id="bannerLeft">
-                ... Java Maven-based project analyzed on SonarCloud using Travis-CI.org pour compiler ...
+                ... MiniP Maven-based documentation generation avec Travis-CI.org ...
                 </div>
                     <div class="clear">
         <hr/>
@@ -60,7 +60,9 @@
     <div id="bodyColumn">
       <div id="contentBox">
         <h1>Cahier des charges</h1>
-<h1>sous - titre</h1>
+<div class="section">
+<h2>sous - titre<a name="sous_-_titre"></a></h2>
+<p>Le syst&#xe8;me a pour ambition de formaliser la production de documentation.</p></div>
       </div>
     </div>
     <div class="clear">
