--- a/project-summary.html
+++ b/project-summary.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>... Java Maven-based project analyzed on SonarCloud using Travis-CI.org pour compiler ... - Project Summary</title>
+    <title>... MiniP Maven-based documentation generation avec Travis-CI.org ... - Project Summary</title>
     <style type="text/css" media="all">
       @import url("./css/maven-base.css");
       @import url("./css/maven-theme.css");
@@ -17,7 +17,7 @@
   <body class="composite">
     <div id="banner">
                     <div id="bannerLeft">
-                ... Java Maven-based project analyzed on SonarCloud using Travis-CI.org pour compiler ...
+                ... MiniP Maven-based documentation generation avec Travis-CI.org ...
                 </div>
                     <div class="clear">
         <hr/>
@@ -69,7 +69,7 @@
 <th>Value</th></tr>
 <tr class="b">
 <td>Name</td>
-<td>... Java Maven-based project analyzed on SonarCloud using Travis-CI.org pour compiler ...</td></tr>
+<td>... MiniP Maven-based documentation generation avec Travis-CI.org ...</td></tr>
 <tr class="a">
 <td>Description</td>
 <td>-</td></tr>
