--- a/dependencies.html
+++ b/dependencies.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>... Java Maven-based project analyzed on SonarCloud using Travis-CI.org pour compiler ... - Project Dependencies</title>
+    <title>... MiniP Maven-based documentation generation avec Travis-CI.org ... - Project Dependencies</title>
     <style type="text/css" media="all">
       @import url("./css/maven-base.css");
       @import url("./css/maven-theme.css");
@@ -17,7 +17,7 @@
   <body class="composite">
     <div id="banner">
                     <div id="bannerLeft">
-                ... Java Maven-based project analyzed on SonarCloud using Travis-CI.org pour compiler ...
+                ... MiniP Maven-based documentation generation avec Travis-CI.org ...
                 </div>
                     <div class="clear">
         <hr/>
@@ -125,7 +125,7 @@
 <li>fbab:fbab_hachathon2018:jar:1.0-SNAPSHOT <img id="_img1" src="./images/icon_info_sml.gif" alt="[Information]" onclick="toggleDependencyDetails( '_dep0', '_img1' );" style="cursor: pointer; vertical-align: text-bottom;"></img><div id="_dep0" style="display:none">
 <table border="0" class="bodyTable">
 <tr class="a">
-<th>... Java Maven-based project analyzed on SonarCloud using Travis-CI.org pour compiler ...</th></tr>
+<th>... MiniP Maven-based documentation generation avec Travis-CI.org ...</th></tr>
 <tr class="b">
 <td>
 <p><b>Description: </b>There is currently no description associated with this project.</p>
@@ -154,7 +154,7 @@
 <div class="section">
 <h2>Licenses<a name="Licenses"></a></h2>
 <p><b>BSD style: </b>Hamcrest Core</p>
-<p><b>Unknown: </b>... Java Maven-based project analyzed on SonarCloud using Travis-CI.org pour compiler ...</p>
+<p><b>Unknown: </b>... MiniP Maven-based documentation generation avec Travis-CI.org ...</p>
 <p><b>Common Public License Version 1.0: </b>JUnit</p></div><a name="Dependency_File_Details"></a>
 <div class="section">
 <h2>Dependency File Details<a name="Dependency_File_Details"></a></h2>
