--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>... Java Maven-based project analyzed on SonarCloud using Travis-CI.org pour compiler ... - About</title>
+    <title>... MiniP Maven-based documentation generation avec Travis-CI.org ... - About</title>
     <style type="text/css" media="all">
       @import url("./css/maven-base.css");
       @import url("./css/maven-theme.css");
@@ -17,7 +17,7 @@
   <body class="composite">
     <div id="banner">
                     <div id="bannerLeft">
-                ... Java Maven-based project analyzed on SonarCloud using Travis-CI.org pour compiler ...
+                ... MiniP Maven-based documentation generation avec Travis-CI.org ...
                 </div>
                     <div class="clear">
         <hr/>
@@ -60,7 +60,7 @@
     <div id="bodyColumn">
       <div id="contentBox">
         <div class="section">
-<h2>About ... Java Maven-based project analyzed on SonarCloud using Travis-CI.org pour compiler ...<a name="About_..._Java_Maven-based_project_analyzed_on_SonarCloud_using_Travis-CI.org_pour_compiler_..."></a></h2><a name="About_..._Java_Maven-based_project_analyzed_on_SonarCloud_using_Travis-CI.org_pour_compiler_..."></a>
+<h2>About ... MiniP Maven-based documentation generation avec Travis-CI.org ...<a name="About_..._MiniP_Maven-based_documentation_generation_avec_Travis-CI.org_..."></a></h2><a name="About_..._MiniP_Maven-based_documentation_generation_avec_Travis-CI.org_..."></a>
 <p>There is currently no description associated with this project.</p></div>
       </div>
     </div>
