--- a/plugin-management.html
+++ b/plugin-management.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>... Java Maven-based project analyzed on SonarCloud using Travis-CI.org pour compiler ... - Project Plugin Management</title>
+    <title>... MiniP Maven-based documentation generation avec Travis-CI.org ... - Project Plugin Management</title>
     <style type="text/css" media="all">
       @import url("./css/maven-base.css");
       @import url("./css/maven-theme.css");
@@ -17,7 +17,7 @@
   <body class="composite">
     <div id="banner">
                     <div id="bannerLeft">
-                ... Java Maven-based project analyzed on SonarCloud using Travis-CI.org pour compiler ...
+                ... MiniP Maven-based documentation generation avec Travis-CI.org ...
                 </div>
                     <div class="clear">
         <hr/>
