Building site for my project

--- a/cdc.html
+++ b/cdc.html
@@ -63,6 +63,11 @@
 <div class="section">
 <h2>sous - titre<a name="sous_-_titre"></a></h2>
 <p>Le syst&#xe8;me a pour ambition de formaliser la production de documentation.</p></div>
+<div class="section">
+<h2>cas d&#x2019;utilisation<a name="cas_dutilisation"></a></h2></div>
+<div class="section">
+<h2>contraintes fonctionnelles<a name="contraintes_fonctionnelles"></a></h2>
+<p>TODO: ajouter une contrainte</p></div>
       </div>
     </div>
     <div class="clear">
