--- a/dependency-info.html
+++ b/dependency-info.html
@@ -49,6 +49,15 @@
                   <li class="none">
                           <a href="faq.html" title="FAQ">FAQ</a>
             </li>
+                  <li class="none">
+                          <a href="faq.html" title="FAQ">FAQ</a>
+            </li>
+          </ul>
+                       <h5>Audit</h5>
+                  <ul>
+                  <li class="none">
+                          <a href="textlint.html" title="Avancement documentation">Avancement documentation</a>
+            </li>
           </ul>
                              <a href="http://maven.apache.org/" title="Built by Maven" class="poweredBy">
         <img class="poweredBy" alt="Built by Maven" src="./images/logos/maven-feather.png" />
