Building site for my project

--- a/textlint.html
+++ b/textlint.html
@@ -58,6 +58,9 @@
                   <li class="none">
             <strong>Avancement documentation</strong>
           </li>
+                  <li class="none">
+                          <a href="travislog.html" title="Journal CI">Journal CI</a>
+            </li>
           </ul>
                              <a href="http://maven.apache.org/" title="Built by Maven" class="poweredBy">
         <img class="poweredBy" alt="Built by Maven" src="./images/logos/maven-feather.png" />
