--- a/travislog.html
+++ b/travislog.html
@@ -58,6 +58,9 @@
                   <li class="none">
                           <a href="textlint.html" title="Avancement documentation">Avancement documentation</a>
             </li>
+                  <li class="none">
+            <strong>Journal CI</strong>
+          </li>
           </ul>
                              <a href="http://maven.apache.org/" title="Built by Maven" class="poweredBy">
         <img class="poweredBy" alt="Built by Maven" src="./images/logos/maven-feather.png" />
@@ -68,7 +71,7 @@
     </div>
     <div id="bodyColumn">
       <div id="contentBox">
-        <p><a href="377987376">$TRAVIS_JOB_ID</a></p>
+        <p><a href="377987475">$TRAVIS_JOB_ID</a></p>
       </div>
     </div>
     <div class="clear">
