--- a/dependency-convergence.html
+++ b/dependency-convergence.html
@@ -58,6 +58,9 @@
                   <li class="none">
                           <a href="textlint.html" title="Avancement documentation">Avancement documentation</a>
             </li>
+                  <li class="none">
+                          <a href="travislog.html" title="Journal CI">Journal CI</a>
+            </li>
           </ul>
                              <a href="http://maven.apache.org/" title="Built by Maven" class="poweredBy">
         <img class="poweredBy" alt="Built by Maven" src="./images/logos/maven-feather.png" />
