Building site for my project

--- a/textlint.html
+++ b/textlint.html
@@ -71,8 +71,14 @@
     </div>
     <div id="bodyColumn">
       <div id="contentBox">
-        <p>/home/travis/build/fbab/fbab_sonar_via_travis_for_mvn/src/site/markdown/cdc.md  6:1 error Found empty section: <tt>## cas d'utilisation</tt> no-empty-section  9:1 error Found TODO: &#x2018;TODO: ajouter une contrainte&#x2019; no-todo</p>
-<p>&#x2716; 2 problems (2 errors, 0 warnings)</p>
+        <div class="source">
+<pre>/home/travis/build/fbab/fbab_sonar_via_travis_for_mvn/src/site/markdown/cdc.md
+  6:1  error  Found empty section: `## cas d'utilisation`  no-empty-section
+  9:1  error  Found TODO: 'TODO: ajouter une contrainte'   no-todo
+
+&#x2716; 2 problems (2 errors, 0 warnings)
+
+</pre></div>
       </div>
     </div>
     <div class="clear">
