Building site for my project

--- a/travislog.html
+++ b/travislog.html
@@ -71,7 +71,7 @@
     </div>
     <div id="bodyColumn">
       <div id="contentBox">
-        <p><a class="externalLink" href="https://api.travis-ci.org/v3/job/377988454">TRAVIS JOB LOG377988454</a></p>
+        <p><a class="externalLink" href="https://api.travis-ci.org/v3/job/377989602/log.txt">TRAVIS JOB LOG377989602</a></p>
       </div>
     </div>
     <div class="clear">
