--- a/dependency-info.html
+++ b/dependency-info.html
@@ -59,6 +59,9 @@
                           <a href="textlint.html" title="Avancement documentation">Avancement documentation</a>
             </li>
                   <li class="none">
+                          <a href="mvnvalidate.html" title="Journal Build Automation Tool">Journal Build Automation Tool</a>
+            </li>
+                  <li class="none">
                           <a href="travislog.html" title="Journal CI">Journal CI</a>
             </li>
           </ul>
