--- a/travislog.html
+++ b/travislog.html
@@ -59,6 +59,9 @@
                           <a href="textlint.html" title="Avancement documentation">Avancement documentation</a>
             </li>
                   <li class="none">
+                          <a href="mvnvalidate.html" title="Journal Build Automation Tool">Journal Build Automation Tool</a>
+            </li>
+                  <li class="none">
             <strong>Journal CI</strong>
           </li>
           </ul>
@@ -71,7 +74,7 @@
     </div>
     <div id="bodyColumn">
       <div id="contentBox">
-        <p><a class="externalLink" href="https://api.travis-ci.org/v3/job/377990414/log.txt">TRAVIS JOB LOG377990414</a></p>
+        <p><a class="externalLink" href="https://api.travis-ci.org/v3/job/377990503/log.txt">TRAVIS JOB LOG377990503</a></p>
       </div>
     </div>
     <div class="clear">
