Building site for my project

--- a/mvnvalidate.html
+++ b/mvnvalidate.html
@@ -59,11 +59,11 @@
                           <a href="textlint.html" title="Avancement documentation">Avancement documentation</a>
             </li>
                   <li class="none">
-                          <a href="mvnvalidate.html" title="Journal Build Automation Tool">Journal Build Automation Tool</a>
-            </li>
-                  <li class="none">
-            <strong>Journal CI</strong>
+            <strong>Journal Build Automation Tool</strong>
           </li>
+                  <li class="none">
+                          <a href="travislog.html" title="Journal CI">Journal CI</a>
+            </li>
           </ul>
                              <a href="http://maven.apache.org/" title="Built by Maven" class="poweredBy">
         <img class="poweredBy" alt="Built by Maven" src="./images/logos/maven-feather.png" />
@@ -74,7 +74,14 @@
     </div>
     <div id="bodyColumn">
       <div id="contentBox">
-        <p><a class="externalLink" href="https://api.travis-ci.org/v3/job/377991091/log.txt">TRAVIS JOB LOG377991091</a></p>
+        <div class="source">
+<pre>[ERROR] Failed to execute goal org.apache.maven.plugins:maven-enforcer-plugin:3.0.0-M1:enforce (enforce-files-exist) on project fbab_hachathon2018: Some Enforcer rules have failed. Look above for specific messages explaining why the rule failed. -&gt; [Help 1]
+[ERROR] 
+[ERROR] To see the full stack trace of the errors, re-run Maven with the -e switch.
+[ERROR] Re-run Maven using the -X switch to enable full debug logging.
+[ERROR] 
+[ERROR] For more information about the errors and possible solutions, please read the following articles:
+[ERROR] [Help 1] http://cwiki.apache.org/confluence/display/MAVEN/MojoExecutionException</pre></div>
       </div>
     </div>
     <div class="clear">
