--- a/textlint.html
+++ b/textlint.html
@@ -56,14 +56,14 @@
                        <h5>Audit</h5>
                   <ul>
                   <li class="none">
-                          <a href="textlint.html" title="Avancement documentation">Avancement documentation</a>
-            </li>
+            <strong>Avancement documentation</strong>
+          </li>
                   <li class="none">
                           <a href="mvnvalidate.html" title="Journal Build Automation Tool">Journal Build Automation Tool</a>
             </li>
                   <li class="none">
-            <strong>Journal CI</strong>
-          </li>
+                          <a href="travislog.html" title="Journal CI">Journal CI</a>
+            </li>
           </ul>
                              <a href="http://maven.apache.org/" title="Built by Maven" class="poweredBy">
         <img class="poweredBy" alt="Built by Maven" src="./images/logos/maven-feather.png" />
@@ -74,7 +74,8 @@
     </div>
     <div id="bodyColumn">
       <div id="contentBox">
-        <p><a class="externalLink" href="https://api.travis-ci.org/v3/job/377991091/log.txt">TRAVIS JOB LOG377991091</a></p>
+        <div class="source">
+<pre></pre></div>
       </div>
     </div>
     <div class="clear">
