Building site for my project

--- a/textlint.html
+++ b/textlint.html
@@ -75,7 +75,13 @@
     <div id="bodyColumn">
       <div id="contentBox">
         <div class="source">
-<pre></pre></div>
+<pre>
+/home/travis/build/fbab/fbab_sonar_via_travis_for_mvn/src/site/markdown/cdc.md
+  6:1  error  Found empty section: `## cas d'utilisation`  no-empty-section
+  9:1  error  Found TODO: 'TODO: ajouter une contrainte'   no-todo
+
+&#xe2;&#x9c;&#x96; 2 problems (2 errors, 0 warnings)
+</pre></div>
       </div>
     </div>
     <div class="clear">
