--- a/plugins.html
+++ b/plugins.html
@@ -86,38 +86,42 @@
 <td><a class="externalLink" href="https://github.com/github/maven-plugins">site-maven-plugin</a></td>
 <td>0.12</td></tr>
 <tr class="a">
+<td>com.github.jeluard</td>
+<td><a class="externalLink" href="https://github.com/jeluard/plantuml-maven-plugin/plantuml-maven-plugin">plantuml-maven-plugin</a></td>
+<td>7941</td></tr>
+<tr class="b">
 <td>org.apache.maven.plugins</td>
 <td><a class="externalLink" href="http://maven.apache.org/plugins/maven-clean-plugin/">maven-clean-plugin</a></td>
 <td>2.5</td></tr>
-<tr class="b">
+<tr class="a">
 <td>org.apache.maven.plugins</td>
 <td><a class="externalLink" href="http://maven.apache.org/plugins/maven-compiler-plugin/">maven-compiler-plugin</a></td>
 <td>3.1</td></tr>
-<tr class="a">
+<tr class="b">
 <td>org.apache.maven.plugins</td>
 <td><a class="externalLink" href="http://maven.apache.org/plugins/maven-deploy-plugin/">maven-deploy-plugin</a></td>
 <td>2.7</td></tr>
-<tr class="b">
+<tr class="a">
 <td>org.apache.maven.plugins</td>
 <td><a class="externalLink" href="http://maven.apache.org/enforcer/maven-enforcer-plugin/">maven-enforcer-plugin</a></td>
 <td>3.0.0-M1</td></tr>
-<tr class="a">
+<tr class="b">
 <td>org.apache.maven.plugins</td>
 <td><a class="externalLink" href="http://maven.apache.org/plugins/maven-install-plugin/">maven-install-plugin</a></td>
 <td>2.4</td></tr>
-<tr class="b">
+<tr class="a">
 <td>org.apache.maven.plugins</td>
 <td><a class="externalLink" href="http://maven.apache.org/plugins/maven-jar-plugin/">maven-jar-plugin</a></td>
 <td>2.4</td></tr>
-<tr class="a">
+<tr class="b">
 <td>org.apache.maven.plugins</td>
 <td><a class="externalLink" href="http://maven.apache.org/plugins/maven-resources-plugin/">maven-resources-plugin</a></td>
 <td>2.6</td></tr>
-<tr class="b">
+<tr class="a">
 <td>org.apache.maven.plugins</td>
 <td><a class="externalLink" href="http://maven.apache.org/plugins/maven-site-plugin/">maven-site-plugin</a></td>
 <td>3.3</td></tr>
-<tr class="a">
+<tr class="b">
 <td>org.apache.maven.plugins</td>
 <td><a class="externalLink" href="http://maven.apache.org/surefire/maven-surefire-plugin">maven-surefire-plugin</a></td>
 <td>2.12.4</td></tr></table></div>
