--- a/project-summary.html
+++ b/project-summary.html
@@ -41,7 +41,19 @@
       <div id="navcolumn">
              
                     
-                                <h5>Overview</h5>
+                                <h5>Analyse</h5>
+                  <ul>
+                  <li class="none">
+                          <a href="cdc.html" title="Cahier des charges">Cahier des charges</a>
+            </li>
+                  <li class="none">
+                          <a href="images/component_diagram.png" title="Diagramme de cas d'utilisation">Diagramme de cas d'utilisation</a>
+            </li>
+                  <li class="none">
+                          <a href="faq.html" title="FAQ">FAQ</a>
+            </li>
+          </ul>
+                       <h5>Conception</h5>
                   <ul>
                   <li class="none">
                           <a href="cdc.html" title="Cahier des charges">Cahier des charges</a>
