--- a/travislog.html
+++ b/travislog.html
@@ -41,7 +41,19 @@
       <div id="navcolumn">
              
                     
-                                <h5>Overview</h5>
+                                <h5>Analyse</h5>
+                  <ul>
+                  <li class="none">
+                          <a href="cdc.html" title="Cahier des charges">Cahier des charges</a>
+            </li>
+                  <li class="none">
+                          <a href="images/component_diagram.png" title="Diagramme de cas d'utilisation">Diagramme de cas d'utilisation</a>
+            </li>
+                  <li class="none">
+                          <a href="faq.html" title="FAQ">FAQ</a>
+            </li>
+          </ul>
+                       <h5>Conception</h5>
                   <ul>
                   <li class="none">
                           <a href="cdc.html" title="Cahier des charges">Cahier des charges</a>
@@ -74,7 +86,7 @@
     </div>
     <div id="bodyColumn">
       <div id="contentBox">
-        <p><a class="externalLink" href="https://api.travis-ci.org/v3/job/378130584/log.txt">TRAVIS JOB LOG378130584</a></p>
+        <p><a class="externalLink" href="https://api.travis-ci.org/v3/job/378132088/log.txt">TRAVIS JOB LOG378132088</a></p>
       </div>
     </div>
     <div class="clear">
