Building site for my project

--- a/cdc.html
+++ b/cdc.html
@@ -47,7 +47,7 @@
             <strong>Cahier des charges</strong>
           </li>
                   <li class="none">
-                          <a href="images/component_diagram.png" title="Diagramme de cas d'utilisation">Diagramme de cas d'utilisation</a>
+                          <a href="images/components.png" title="Diagramme de cas d'utilisation">Diagramme de cas d'utilisation</a>
             </li>
                   <li class="none">
                           <a href="faq.html" title="FAQ">FAQ</a>
@@ -91,9 +91,10 @@
 <h2>sous - titre<a name="sous_-_titre"></a></h2>
 <p>Le syst&#xe8;me a pour ambition de formaliser la production de documentation.</p></div>
 <div class="section">
-<h2>cas d&#x2019;utilisation<a name="cas_dutilisation"></a></h2></div>
+<h2>Cas d&#x2019;utilisation<a name="Cas_dutilisation"></a></h2>
+<p>Diagramme de cas d&#x2019;utilisation ![Diagramme de cas d&#x2019;utilisation]images/usecases.png</p></div>
 <div class="section">
-<h2>contraintes fonctionnelles<a name="contraintes_fonctionnelles"></a></h2>
+<h2>Contraintes fonctionnelles<a name="Contraintes_fonctionnelles"></a></h2>
 <p>TODO: ajouter une contrainte</p></div>
       </div>
     </div>
