--- a/textlint.html
+++ b/textlint.html
@@ -47,7 +47,7 @@
                           <a href="cdc.html" title="Cahier des charges">Cahier des charges</a>
             </li>
                   <li class="none">
-                          <a href="images/component_diagram.png" title="Diagramme de cas d'utilisation">Diagramme de cas d'utilisation</a>
+                          <a href="images/components.png" title="Diagramme de cas d'utilisation">Diagramme de cas d'utilisation</a>
             </li>
                   <li class="none">
                           <a href="faq.html" title="FAQ">FAQ</a>
@@ -89,10 +89,9 @@
         <div class="source">
 <pre>
 /home/travis/build/fbab/fbab_sonar_via_travis_for_mvn/src/site/markdown/cdc.md
-  6:1  error  Found empty section: `## cas d'utilisation`  no-empty-section
-  9:1  error  Found TODO: 'TODO: ajouter une contrainte'   no-todo
+  11:1  error  Found TODO: 'TODO: ajouter une contrainte'  no-todo
 
-&#xe2;&#x9c;&#x96; 2 problems (2 errors, 0 warnings)
+&#xe2;&#x9c;&#x96; 1 problem (1 error, 0 warnings)
 </pre></div>
       </div>
     </div>
