--- a/dependencies.html
+++ b/dependencies.html
@@ -47,7 +47,7 @@
                           <a href="cdc.html" title="Cahier des charges">Cahier des charges</a>
             </li>
                   <li class="none">
-                          <a href="images/component_diagram.png" title="Diagramme de cas d'utilisation">Diagramme de cas d'utilisation</a>
+                          <a href="images/components.png" title="Diagramme de cas d'utilisation">Diagramme de cas d'utilisation</a>
             </li>
                   <li class="none">
                           <a href="faq.html" title="FAQ">FAQ</a>
