--- a/travislog.html
+++ b/travislog.html
@@ -47,7 +47,7 @@
                           <a href="cdc.html" title="Cahier des charges">Cahier des charges</a>
             </li>
                   <li class="none">
-                          <a href="images/component_diagram.png" title="Diagramme de cas d'utilisation">Diagramme de cas d'utilisation</a>
+                          <a href="images/components.png" title="Diagramme de cas d'utilisation">Diagramme de cas d'utilisation</a>
             </li>
                   <li class="none">
                           <a href="faq.html" title="FAQ">FAQ</a>
@@ -86,7 +86,7 @@
     </div>
     <div id="bodyColumn">
       <div id="contentBox">
-        <p><a class="externalLink" href="https://api.travis-ci.org/v3/job/378132088/log.txt">TRAVIS JOB LOG378132088</a></p>
+        <p><a class="externalLink" href="https://api.travis-ci.org/v3/job/378132969/log.txt">TRAVIS JOB LOG378132969</a></p>
       </div>
     </div>
     <div class="clear">
