Building site for my project

--- a/cdc.html
+++ b/cdc.html
@@ -92,7 +92,8 @@
 <p>Le syst&#xe8;me a pour ambition de formaliser la production de documentation.</p></div>
 <div class="section">
 <h2>Cas d&#x2019;utilisation<a name="Cas_dutilisation"></a></h2>
-<p>Diagramme de cas d&#x2019;utilisation ![Diagramme de cas d&#x2019;utilisation]images/usecases.png</p></div>
+<p>Diagramme de cas d&#x2019;utilisation</p>
+<p>![Diagramme de cas d&#x2019;utilisation]images/components.png</p></div>
 <div class="section">
 <h2>Contraintes fonctionnelles<a name="Contraintes_fonctionnelles"></a></h2>
 <p>TODO: ajouter une contrainte</p></div>
