Building site for my project

--- a/cdc.html
+++ b/cdc.html
@@ -93,7 +93,7 @@
 <div class="section">
 <h2>Cas d&#x2019;utilisation<a name="Cas_dutilisation"></a></h2>
 <p>Diagramme de cas d&#x2019;utilisation</p>
-<p>![Diagramme de cas d&#x2019;utilisation]images/components.png</p></div>
+<p><img src="images/components.png" alt="Diagramme de cas d&rsquo;utilisation" /></p></div>
 <div class="section">
 <h2>Contraintes fonctionnelles<a name="Contraintes_fonctionnelles"></a></h2>
 <p>TODO: ajouter une contrainte</p></div>
